--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "node-geocoder": "^4.2.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
