--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,7 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb://localhost:27017/?readPreference=primary&directConnection=true&ssl=false
+GEOCODER_PROVIDER = mapquest
+GEOCODER_API_KEY = 6YREx39bEGwrhkYlG84IaZEHYANmj90g
+
+
