fileUpload path and max size Variables

--- a/config/config.env
+++ b/config/config.env
@@ -3,5 +3,7 @@ PORT = 5000
 MONGO_URI = mongodb://localhost:27017/?readPreference=primary&directConnection=true&ssl=false
 GEOCODER_PROVIDER = mapquest
 GEOCODER_API_KEY = 6YREx39bEGwrhkYlG84IaZEHYANmj90g
+FILE_UPLOAD_PATH = ./public/uploads
+MAX_FILE_SIZE = 1000000
 
 
