--- a/config/config.env
+++ b/config/config.env
@@ -1,9 +1,15 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb://localhost:27017/?readPreference=primary&directConnection=true&ssl=false
+
 GEOCODER_PROVIDER = mapquest
 GEOCODER_API_KEY = 6YREx39bEGwrhkYlG84IaZEHYANmj90g
+
 FILE_UPLOAD_PATH = ./public/uploads
 MAX_FILE_SIZE = 1000000
+
+JWT_SECRET=asdfghjklqwerty
+JWT_EXPIRE=15d
+JWT_COOKIE_EXPIRE = 15
 
 
