--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.7.7",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
