NodeMailer Env Variables

--- a/config/config.env
+++ b/config/config.env
@@ -12,4 +12,11 @@ JWT_SECRET=asdfghjklqwerty
 JWT_EXPIRE=15d
 JWT_COOKIE_EXPIRE = 15
 
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=f5d30417895a74
+SMTP_PASSWORD=2e13ae1fe40e20
+FROM_EMAIL=noreply@devcamper.io
+FROM_NAME=devcamper
+
 
