--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,8 @@
-NODE_ENV = development
+NODE_ENV = production
 PORT = 5000
+
 MONGO_URI = mongodb://localhost:27017/?readPreference=primary&directConnection=true&ssl=false
+PROD_MONGO_URI = mongodb+srv://devcamper:ZyukSIlvlmsV43KR@cluster0.pdvfl.mongodb.net/?retryWrites=true&w=majority
 
 GEOCODER_PROVIDER = mapquest
 GEOCODER_API_KEY = 6YREx39bEGwrhkYlG84IaZEHYANmj90g
